--- a/home.html
+++ b/home.html
@@ -22,15 +22,15 @@
             Hot Restaurant
           </h1>
           <hr></hr>
-          <p class="text-center">
+          <h3 class="text-center">
             Party of 5 (like the TV show). Be there or be on the waitlist
-          </p>
+          </h3>
           <p class="text-center">
-            <a class="btn btn-primary btn-lg" href="#" role="button">
+            <a class="btn btn-primary btn-lg" href="/tables" role="button">
               <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
               View Tables
             </a>
-            <a class="btn btn-danger btn-lg" href="#" role="button">
+            <a class="btn btn-danger btn-lg" href="/reserve" role="button">
               <span class="glyphicon glyphicon-credit-card" aria-hidden="true"></span>
               Make Reservations
             </a>
